--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html{
+  scroll-behavior: smooth;
+}
+
 * {
     font-family: sans-serif;
  }
@@ -93,5 +97,8 @@
 }
 .galleryimg:hover{
   filter: brightness(80%);
+}
+.galleryimg:active{
+  filter: brightness(70%);
 }
 
