--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-html{
+html {
   scroll-behavior: smooth;
 }
 
@@ -28,6 +28,17 @@ html{
     text-align: center;
     object-fit: contain;
   }
+
+  .nav a:hover {
+    background-color: #bbbbbb;
+    color: black;
+  }
+
+  .navbtn:active {
+    border-style: inset;
+    background-color: #535353;
+    color: blue;
+  }
   
 .nav a {
     float: left;
@@ -35,33 +46,21 @@ html{
     text-align: center;
     padding: 16px 22px;
     text-decoration: none;
-    
     border: 1px solid black;
-    
   }
 
-.nav a:hover {
-    background-color: #bbbbbb;
-    color: black;
-  }
-  
-.nav a.active {
-    background-color: #898989;
-    color: white;
-  }
-
-  a:active{
+  a:active {
     color: blue;
   }
 
-  .centercaption .centerlist{
+  .centercaption .centerlist {
     text-align: center;
    }
-  .title{
+  .title {
     text-align: center;
   }
   
-  .bold{
+  .bold {
     font-weight: bold;
   }
 
@@ -73,25 +72,25 @@ html{
     height: auto;
   }
 
-  h1 img{
+  h1, img, h2, h3, h4, h5, h6{
     text-align: center;
   }
 
-  figcaption{
+  figcaption {
     padding: 20px;
     font-size: 14px;
   }
 
- .right-img{
+ .right-img {
   text-align: center;
   scale: 50%;
  }
 
- .link:active{
+ .link:active {
   font-weight: bold;
  }
  
- .link:hover{
+ .link:hover {
   color: #2b49f5;
  }
 
@@ -100,18 +99,46 @@ html{
   grid-template-columns: repeat(3,1fr);
   grid-auto-flow: dense;
 }
-.galleryimg{
+.galleryimg {
   width: 100%;
   height: 100%;
   border: 2px solid white;
   z-index: 998
 }
-.galleryimg:hover{
+.galleryimg:hover {
   filter: brightness(80%);
   border: 3px solid white;
   z-index: 999;
 }
-.galleryimg:active{
+.galleryimg:active {
   filter: brightness(70%);
 }
+.hdata {
+  border: 1px solid black;
+}
+.hhead {
+  border: 1px solid black;
+}
 
+.history {
+  width:100%;
+  height:100%;
+  border:1px solid;
+  border-collapse:separate;
+  padding:6px;
+}
+.history, th {
+  border:1px solid;
+  padding:6px;
+  background:#F0F0F0;
+}
+.history, td {
+  border:1px solid;
+  padding:6px;
+}
+th{
+  background-color: #8fa0fc;
+}
+tr{
+  background-color: #8f8f8f;
+}
