--- a/styles.css
+++ b/styles.css
@@ -28,22 +28,23 @@
     text-align: center;
     object-fit: contain;
   }
+  
 
-  .nav a:hover {
-    background-color: #bbbbbb;
+  .navbtn:hover {
+    background-color: #e6e6e6;
     color: black;
-    border: 1px solid rgb(0, 0, 0);
-    border-style: inset;
     transition-duration: 0.2s;
+    border-style: inset;
   }
 
   .navbtn:active {
     border-style: inset;
-    background-color: #343434;
-    color: blue;
+    background-color: #a0a0a0;
+    transition-duration: 0.2s;
+    border: 1px solid rgb(0, 0, 0);
   }
   
- .nav a {
+ .navbtn{
     float: left;
     color: #000000;
     text-align: center;
