--- a/styles.css
+++ b/styles.css
@@ -53,10 +53,6 @@
     border: 1px solid black;
   }
 
-  a:active {
-    color: blue;
-  }
-
   .centercaption, .centerlist {
     text-align: center;
    }
@@ -91,10 +87,11 @@
   scale: 50%;
  }
 
+ .link {
+  padding: 6px;
+ }
  .link:active {
-  font-weight: bold;
   border: 2px solid #6177f6;
-  padding: 4px;
  }
  
  .link:hover {
@@ -133,19 +130,19 @@
   border: 1px solid black;
 }
 
- .history {
+ .listdata {
   width:100%;
   height:100%;
   border:1px solid;
   border-collapse:separate;
   padding:6px;
  }
- .history, th {
+ .listdata, th {
   border:1px solid;
   padding:6px;
   background:#F0F0F0;
  }
- .history, td {
+ .listdata, td {
   border:1px solid;
   padding:6px;
  }
